--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/themes": "^3.2.1",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
     "react": "19.1.0",
