--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,10 +1,11 @@
 name: Prod
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
     branches:
       - main
-  workflow_dispatch:
+    types: [opened, synchronize, reopened]
 
 jobs:
   build-test-deploy:
