--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,11 +20,11 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      working-directory: ./front
 
-    - name: Run lint and tests
-      run: |
-        npm run lint
-        npm test
+    - name: Run lint
+      run: npm run lint
+      working-directory: ./front
 
     - name: Build and start services
       run: docker compose -f docker-compose.test.yml up -d --build
