:bug:(ci): fix trigger

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,10 +1,9 @@
 name: Prod
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types: [opened, synchronize, reopened]
 
 jobs:
   build-test-deploy:
