:building_construction:(docker-compose.prod.yml): fix config for new production environment

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,12 @@ services:
       dockerfile: Dockerfile.prod
     container_name: portfolio_front_prod
     ports:
-      - "80:3000"
+      - "3000:3000"
     environment:
       - NODE_ENV=production
+    networks:
+      - portfolio_net
+
+networks:
+  portfolio_net:
+    external: true
