--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,3 +8,9 @@ services:
       - "80:3000"
     environment:
       - NODE_ENV=production
+    networks:
+      - portfolio_net
+
+networks:
+  portfolio_net:
+    driver: true
